Attendance-Tracker/build/log/idf_py_stderr_output_366960
Command: make -j 10 all
/home/william-hellstrand/school/tqdt11/C2_ESP32-C3/src/main.c: In function 'registry_preload':
/home/william-hellstrand/school/tqdt11/C2_ESP32-C3/src/main.c:536:54: error: 'i' undeclared (first use in this function)
  536 |         const preloaded_card_t *p = &PRELOADED_CARDS[i];
      |                                                      ^
/home/william-hellstrand/school/tqdt11/C2_ESP32-C3/src/main.c:536:54: note: each undeclared identifier is reported only once for each function it appears in
/home/william-hellstrand/school/tqdt11/C2_ESP32-C3/src/main.c:547:13: error: continue statement not within a loop
  547 |             continue;
      |             ^~~~~~~~
/home/william-hellstrand/school/tqdt11/C2_ESP32-C3/src/main.c: At top level:
/home/william-hellstrand/school/tqdt11/C2_ESP32-C3/src/main.c:558:1: error: expected identifier or '(' before '}' token
  558 | }
      | ^
/home/william-hellstrand/school/tqdt11/C2_ESP32-C3/src/main.c: In function 'app_main':
/home/william-hellstrand/school/tqdt11/C2_ESP32-C3/src/main.c:601:14: warning: unused variable 'average' [-Wunused-variable]
  601 |     uint32_t average = 0;
      |              ^~~~~~~
make[2]: *** [esp-idf/src/CMakeFiles/__idf_src.dir/build.make:76: esp-idf/src/CMakeFiles/__idf_src.dir/main.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:7036: esp-idf/src/CMakeFiles/__idf_src.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
